<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_first_name" />

    <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_last_name" />

    <EditText
            android:id="@+id/edit_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_email_address" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:onClick="sendToMixpanel" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_buy"
            android:onClick="recordRevenue" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_background"
            android:onClick="setBackgroundImage" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MixpanelApi.reset()"
            android:onClick="clickedReset" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tweak value = "
                android:onClick="clickedReset" />
        <TextView
                android:id="@+id/tweak_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clickedReset" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="onMixpanelUpdatesReceived() called at "
                android:onClick="clickedReset" />
        <TextView
                android:id="@+id/updates_received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clickedReset" />
    </LinearLayout>
</LinearLayout>

